[metadata]
name = phitigra
version = 0.2.2
author = Jean-Florent Raymond
author_email = "j-florent.raymond@uca.fr"
description = A graph editor for SageMath/Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.limos.fr/jfraymon/phitigra
project_urls =
    Bug Tracker = https://gitlab.limos.fr/jfraymon/phitigra/-/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = phitigra
packages = find:
python_requires = >=3.6
install_requires =
    ipycanvas
    ipywidgets

[options.packages.find]
where = src